tests/compile_fail/assign_wrong_type.stderr
warning: unused import: `whippyunits::*`
 --> tests/compile_fail/assign_wrong_type.rs:2:5
  |
2 | use whippyunits::*;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
 --> tests/compile_fail/assign_wrong_type.rs:9:26
  |
9 |     let mass: Kilogram = length;
  |               --------   ^^^^^^ expected `1`, found `0`
  |               |
  |               expected due to this
  |
  = note: expected struct `Quantity<1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0>`
             found struct `Quantity<0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0>`
